Fix layout problem

--- a/app/styles/layout.css
+++ b/app/styles/layout.css
@@ -681,7 +681,7 @@ li {
   position: relative;
   width:80%;
   margin:0 auto;
-  top:760px;
+  top:782px;
   bottom: 0px;
 }
 
